partial faculty updates